1.3.25
Fixed: Some items missing models
Fixed: Some issues with localizations

1.3.24
Updated es_VE.lang (Allinxter_910)
Added: pt_BR.lang (Diego Ramos)
Added: Config to disable vanilla hearts row and use only custom hearts (#123)
Added: Entity properties for loot tables, scalinghealth:is_blight and scalinghealth:difficulty. See wiki for details (#106)
Added: Config to control blight difficulty multiplier (finally)
Changed: Cap on regen food values removed (#125)

1.3.23
Changed: XP health bonuses can now be used with heart containers (#119)
Changed: Tweaked absorption display textures (#115)
Fixed: Armor bar being too high up when you have more than one row of absorption (#115)

1.3.22
More work on absorption overlay (#115)
Added: Config to set player max health based on their XP level (#119)

1.3.21
Added: Config to set difficulty level with Game Stages. You can set a specific difficulty level for any number of stages, and the largest is chosen. Overrides any other changes to difficulty.
Added: Absorption override, WIP (#115)
Fixed: Medkit recipe missing (changed it slightly because JSON)

1.3.20
Refactoring stuff to prepare for 1.13.
Changed: Max health cap is now changed in main.cfg.
Changed: No longer a coremod, found a better solution.
Changed: Switched to JSON recipes

1.3.19
Fixed (maybe): More unkillable mobs (#117)

1.3.18
Fixed: Mobs being unkillable if max difficulty is zero (#116)

1.3.17
Added: Config to blacklist/whitelist specific mobs with the "Always Blight" mode (#102)
Changed: Revert health text being disabled when custom heart rendering is disabled (#113)
Changed: Idle multiplier now accepts negative values (#112)
Fixed: The "get" commands not checking the right player (#111)
Fixed: Damage scaling sometimes applying infinite damage to the player, resulting in the player being unkillable (#110)

1.3.16
Added: Configs to apply the new damage scaling system to mobs (#99)